apps/base/authentik/authentik-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  labels:
    kubernetes.io/metadata.name: authentik
