apps/base/authentik/authentik-media-permissions-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
spec:
  template:
    spec:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
spec:
  template:
    spec:
