apps/base/authentik/authentik-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-ingressroute
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
  tls: {}
